Fixed file and controllers problems

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=admin
 spring.datasource.password=password
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-bean-definition-overriding=true
+
+uploaded.max_file_size=1048576
+uploaded.dir=upload
