--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/diploma
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-bean-definition-overriding=true
 
 uploaded.max_file_size=1048576
 uploaded.dir=upload
+
