--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-bean-definition-overriding=true
 
+spring.datasource.hikari.auto-commit=false
+
 uploaded.max_file_size=1048576
 uploaded.dir=upload
 
