--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/diploma
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 
 
